// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar wrapper component should apply values from theme 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 0,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 0,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "marginLeft": 8,
          }
        }
      >
        <View>
          <View
            replaceTheme={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "justifyContent": "center",
              }
            }
            theme={
              Object {
                "SearchBar": Object {
                  "placeholder": "Enter search term",
                },
                "colors": Object {
                  "disabled": "hsl(208, 8%, 90%)",
                  "divider": "#bcbbc1",
                  "error": "#ff190c",
                  "grey0": "#393e42",
                  "grey1": "#43484d",
                  "grey2": "#5e6977",
                  "grey3": "#86939e",
                  "grey4": "#bdc6cf",
                  "grey5": "#e1e8ee",
                  "greyOutline": "#bbb",
                  "platform": Object {
                    "android": Object {
                      "error": "#f44336",
                      "primary": "#2196f3",
                      "secondary": "#9C27B0",
                      "success": "#4caf50",
                      "warning": "#ffeb3b",
                    },
                    "ios": Object {
                      "error": "#ff3b30",
                      "primary": "#007aff",
                      "secondary": "#5856d6",
                      "success": "#4cd964",
                      "warning": "#ffcc00",
                    },
                  },
                  "primary": "#2089dc",
                  "searchBg": "#303337",
                  "secondary": "#8F0CE8",
                  "success": "#52c41a",
                  "warning": "#faad14",
                },
              }
            }
            underlayColor="white"
            updateTheme={[Function]}
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": 25,
                  },
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="iconIcon"
            >
              
            </Text>
          </View>
        </View>
      </View>
      <TextInput
        allowFontScaling={true}
        editable={true}
        onBlur={[Function]}
        onCancel={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Enter search term"
        platform="android"
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "marginLeft": 24,
            "marginRight": 8,
            "minHeight": 40,
          }
        }
        testID="searchInput"
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "marginLeft": 15,
            "marginRight": 8,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`SearchBar wrapper component should render a default SearchBar if wrong platform 1`] = `
<SearchBar
  lightTheme={false}
  loadingProps={Object {}}
  onBlur={[Function]}
  onChangeText={[Function]}
  onClear={[Function]}
  onFocus={[Function]}
  platform="wrong-platform"
  round={false}
  showLoading={false}
  value=""
/>
`;

exports[`SearchBar wrapper component should render an Android SearchBar 1`] = `
<SearchBar
  cancelIcon={
    Object {
      "color": "rgba(0, 0, 0, 0.54)",
      "name": "arrow-back",
      "size": 25,
      "type": "material",
    }
  }
  clearIcon={
    Object {
      "color": "rgba(0, 0, 0, 0.54)",
      "name": "clear",
      "size": 25,
      "type": "material",
    }
  }
  loadingProps={Object {}}
  onBlur={[Function]}
  onCancel={[Function]}
  onChangeText={[Function]}
  onClear={[Function]}
  onFocus={[Function]}
  platform="android"
  searchIcon={
    Object {
      "color": "rgba(0, 0, 0, 0.54)",
      "name": "search",
      "size": 25,
      "type": "material",
    }
  }
  showLoading={false}
  value=""
/>
`;

exports[`SearchBar wrapper component should render an iOS SearchBar 1`] = `
<SearchBar
  cancelButtonProps={Object {}}
  cancelButtonTitle="Cancel"
  clearIcon={
    Object {
      "color": "#7d7d7d",
      "name": "ios-close-circle",
      "size": 20,
      "type": "ionicon",
    }
  }
  loadingProps={Object {}}
  onBlur={[Function]}
  onCancel={[Function]}
  onChangeText={[Function]}
  onClear={[Function]}
  onFocus={[Function]}
  placeholderTextColor="#7d7d7d"
  platform="ios"
  searchIcon={
    Object {
      "color": "#7d7d7d",
      "name": "ios-search",
      "size": 20,
      "type": "ionicon",
    }
  }
  showCancel={false}
  showLoading={false}
  value=""
/>
`;

exports[`SearchBar wrapper component should render without issues 1`] = `
<SearchBar
  lightTheme={false}
  loadingProps={Object {}}
  onBlur={[Function]}
  onChangeText={[Function]}
  onClear={[Function]}
  onFocus={[Function]}
  platform="default"
  round={false}
  showLoading={false}
  value=""
/>
`;
